feat: complete revamp of Zomato food delivery LLD with multi-entity state machine, OTP verification, 2D city simulation, UML diagram, and design details